--- a/css/main.css
+++ b/css/main.css
@@ -67,6 +67,6 @@ main{
 
 /*Animations*/
 .spinning-animation{
-    animation:spin 1s linear 20; /* max 20 spins as my gpu gets hot, if for example because of a breakpoint, the animation spins longer*/
+    animation:spin 0.7s cubic-bezier(0.64, 0.3, 0.33, 0.64) 20; /* max 20 spins as my gpu gets hot, if for example because of a breakpoint, the animation spins longer*/
 }
 @keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
