--- a/css/main.css
+++ b/css/main.css
@@ -78,6 +78,17 @@ main{
     visibility: hidden;
 }
 
+.infoBox{
+    border-radius: 4px;
+    border: 1px solid rgba(0, 0, 0, 0.45);
+    font-size:0.7em;
+    color: rgba(0, 0, 0, 0.67);
+    background: rgba(0, 0, 0, 0.05);
+    margin-left:8px;
+    margin-bottom: 5px;
+    padding: 1px;
+}
+
 
 /*Slider customization*/
 .noUi-horizontal .noUi-base .noUi-handle {
@@ -85,6 +96,8 @@ main{
     height: 28px;
     left: -8px;
     top: -8px;
+    opacity: 0.79;
+    outline:none;
 }
 .noUi-horizontal .noUi-base  .noUi-handle:after, .noUi-horizontal .noUi-base .noUi-handle:before {
     display: none;
