--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@
 }
 html, body{
     height:100%;
+    overflow-y: hidden; /*strange but seems to be necessary*/
 }
 header{
     height:50px; /*necessary because of 100%-50px*/
@@ -20,6 +21,7 @@ main{
     /*border-right:solid #000000;*/
     box-shadow: rgba(75, 82, 87, 0.45) 0 0 3px 2px;
     border-color: #e7e7e7;
+    overflow-y:auto;
 }
 .filterContainer{
     margin-top: 20px;
@@ -55,9 +57,7 @@ main{
 .no-padding {
     padding:0;
 }
-#movieInfos{
-    visibility:hidden;
-}
+
 .visible{
     visibility: visible !important;
 }
@@ -71,14 +71,15 @@ h5 {
     overflow-y: scroll;
 }
 #movieInfos {
-    height:100%;
+    visibility:hidden;
+    height: calc(100% - 75px);
 }
 .rightSidebarInfos {
-    height:100%;
+    height:95%;
 }
 #similarMovies{
     overflow-y: scroll;
-    height: calc(100% - 313px);
+    height: calc(100% - 215px);
 }
 .similarMovieButton {
     width: 44%;
